--- a/Translation FRA-ENG with transformer.ipynb
+++ b/Translation FRA-ENG with transformer.ipynb
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "7f15b134",
+   "id": "bfed58a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "8ab4f7d2",
+   "id": "15678c7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "a79051f3",
+   "id": "69c8ef06",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "063ea1a2",
+   "id": "fd081564",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "5ec69c46",
+   "id": "0dfaf568",
    "metadata": {
     "scrolled": true
    },
@@ -1453,79 +1453,54 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "ca72695f",
+   "id": "a4d0d028",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# class ExportTranslator(tf.Module):\n",
-    "#   def __init__(self, translator):\n",
-    "#     self.translator = translator\n",
+    "class ExportTranslator(tf.Module):\n",
+    "  def __init__(self, translator):\n",
+    "    self.translator = translator\n",
     "\n",
-    "#   @tf.function(input_signature=[tf.TensorSpec(shape=[], dtype=tf.string)])\n",
-    "#   def __call__(self, sentence):\n",
-    "#     (result,\n",
-    "#      tokens,\n",
-    "#      attention_weights) = self.translator(sentence, max_length=MAX_TOKENS)\n",
+    "  @tf.function(input_signature=[tf.TensorSpec(shape=[], dtype=tf.string)])\n",
+    "  def __call__(self, sentence):\n",
+    "    (result,\n",
+    "     tokens,\n",
+    "     attention_weights) = self.translator(sentence, max_length=MAX_TOKENS)\n",
     "\n",
-    "#     return result"
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "b9126158",
+   "id": "7f63517f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# translator = ExportTranslator(translator)"
+    "translator = ExportTranslator(translator)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "884276e4",
+   "id": "4feab85c",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# tf.saved_model.save(translator, export_dir='fra-translator')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "id": "76d51173",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input:         : Je veux prendre une voiture à l'aéroport\n",
-      "Prediction     : i want to get a car at the airport .\n",
-      "Ground truth   : i want to get a car at the airport .\n",
-      "Input:         : Je veux prendre une voiture à l'aéroport\n",
-      "Prediction     : i want to get a car at the airport .\n",
-      "Ground truth   : i want to get a car at the airport .\n"
-     ]
-    }
-   ],
-   "source": [
-    "sentence = \"Je veux prendre une voiture à l'aéroport\"\n",
-    "ground_truth = 'i want to get a car at the airport .'\n",
-    "\n",
-    "translated_text, translated_tokens, attention_weights = translator(tf.constant(sentence))\n",
-    "print_translation(sentence, translated_text, ground_truth)"
+    "tf.saved_model.save(translator, export_dir='fra-translator')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ba377b",
+   "id": "451e929e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reloaded =  tf.saved_model.load(\"fra-translator\")"
+   ]
   }
  ],
  "metadata": {
