Update Translate Text using TF Addons (3rd version).ipynb

--- a/Translate Text using TF Addons (3rd version).ipynb
+++ b/Translate Text using TF Addons (3rd version).ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a17e67b1",
+   "id": "61b8b796",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b0d9605d",
+   "id": "ba8afd5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e9730f13",
+   "id": "8ea99e12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6c1d3de3",
+   "id": "b01bad47",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04b82788",
+   "id": "9918ea8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fe6b2164",
+   "id": "d8b6b312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a4af33a0",
+   "id": "0d8316e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eb7872a5",
+   "id": "fd085113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "20897df3",
+   "id": "c0494e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aded68d1",
+   "id": "39cf1c8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "82e012d3",
+   "id": "00a7f88e",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9d3f8838",
+   "id": "4d480613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cd6098ad",
+   "id": "9ab0def7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1737d43e",
+   "id": "ce5511d4",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bd0b902e",
+   "id": "5298f66a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0c905360",
+   "id": "1309b796",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "164c9b67",
+   "id": "bdf3784e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0bf9de02",
+   "id": "576ad291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "74b21259",
+   "id": "972210da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1446836a",
+   "id": "652b84c2",
    "metadata": {
     "scrolled": true
    },
@@ -656,8 +656,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b0d4e18b",
+   "execution_count": 42,
+   "id": "a116701a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,8 +689,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "bb20e5be",
+   "execution_count": 43,
+   "id": "8d09a8f6",
    "metadata": {},
    "outputs": [
     {
@@ -714,8 +714,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "46c7d012",
+   "execution_count": 44,
+   "id": "0036fa7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,8 +729,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ef39c82f",
+   "execution_count": 45,
+   "id": "ecdd1eb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,8 +739,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "b6ae8255",
+   "execution_count": 46,
+   "id": "caee55f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,8 +779,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "29116b35",
+   "execution_count": 47,
+   "id": "028db4ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,8 +819,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "4f2e420d",
+   "execution_count": 48,
+   "id": "ba5c7a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,8 +829,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "9c1fb0e8",
+   "execution_count": 49,
+   "id": "7e932835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,8 +839,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "22df9abb",
+   "execution_count": 50,
+   "id": "4c0efc08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,8 +852,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "d4fdba60",
+   "execution_count": 51,
+   "id": "03171711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,8 +862,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "e57b5fbf",
+   "execution_count": 52,
+   "id": "5fa09084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,8 +875,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "51dd1c49",
+   "execution_count": 53,
+   "id": "17c349cd",
    "metadata": {
     "scrolled": true
    },
@@ -889,7 +889,7 @@
        "       b'where it is the table . [END] here .'], dtype=object)>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,8 +901,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "e84415df",
+   "execution_count": 54,
+   "id": "2ded4642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,8 +915,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "89112e75",
+   "execution_count": 55,
+   "id": "6d05e882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,8 +925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "c9b4f48d",
+   "execution_count": 56,
+   "id": "57b8b08f",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "        b'where he is the table . [END] [END] [END] [END]']], dtype=object)>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,8 +960,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "884564b7",
+   "execution_count": 57,
+   "id": "38d95ac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,15 +977,14 @@
     "  @tf.function(input_signature=[tf.TensorSpec(dtype=tf.string, shape=[None])])\n",
     "  def beam_translate(self, sentence):\n",
     "    result, scores = self.translator.beam_translate(sentence)\n",
-    "    scores = []\n",
     "    return result, scores\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "b16ec9d6",
+   "execution_count": 58,
+   "id": "3d3f8d37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,8 +993,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "5191a899",
+   "execution_count": 59,
+   "id": "9c62eb7b",
    "metadata": {
     "scrolled": false
    },
@@ -1035,8 +1034,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "21604687",
+   "execution_count": 60,
+   "id": "2aac3d60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,8 +1044,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "09225adf",
+   "execution_count": 61,
+   "id": "f5f4b04a",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1056,7 @@
        "       b'where it is the table . [END] here .'], dtype=object)>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,8 +1067,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "e99552c2",
+   "execution_count": 62,
+   "id": "340e56d7",
    "metadata": {},
    "outputs": [
     {
@@ -1082,10 +1081,12 @@
        "        [b'the table is the table . [END] [END] [END] [END]',\n",
        "         b'where it is the table . [END] [END] [END] [END]',\n",
        "         b'where he is the table . [END] [END] [END] [END]']], dtype=object)>,\n",
-       " [])"
+       " <tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       " array([[ -8.377641, -23.413399, -32.682148],\n",
+       "        [-18.829876, -20.525223, -32.431763]], dtype=float32)>)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2280cc",
+   "id": "fdaa6a7c",
    "metadata": {},
    "outputs": [],
    "source": []
